--- a/package.json
+++ b/package.json
@@ -2,6 +2,17 @@
   "name": "yummyfs",
   "version": "1.0.0",
   "main": "expo-router/entry",
+  "author": {
+    "name": "kushan gayantha",
+    "email": "kushangayantha001@gmail.com"
+  },
+  "keywords": [
+    "react",
+    "react native",
+    "mobile",
+    "android development",
+    "expo"
+  ],
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,6 +21,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@reduxjs/toolkit": "^1.9.6",
     "expo": "~49.0.12",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
@@ -19,7 +31,8 @@
     "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
