--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-redux": "^8.1.3",
-    "expo-secure-store": "~12.3.1"
+    "expo-secure-store": "~12.3.1",
+    "expo-sqlite": "~11.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
